Fixing related always visible styling

--- a/skin/frontend/juvi/default/css/juvi.css
+++ b/skin/frontend/juvi/default/css/juvi.css
@@ -894,7 +894,7 @@ p.welcome-msg {
   background-image: url(../images/icon_sprite.png); }
 
 .product-view .accordion-info .box-collateral h2 {
-  cursor: pointer;
+  /* cursor: pointer; */
   border-top: 1px solid #CCC; }
 .product-view .accordion-info .box-collateral p {
   font-family: 'Roboto', sans-serif;
