--- a/skin/frontend/juvi/default/scss/_productview.scss
+++ b/skin/frontend/juvi/default/scss/_productview.scss
@@ -100,7 +100,7 @@
 // Additional info
 .product-view .accordion-info .box-collateral {
 	h2 {
-		cursor: pointer;
+		/* cursor: pointer; */
 		border-top: 1px solid #CCC;
 	}
 	p {
